<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_benchmark</name>
  <version>1.0.0</version>
  <description>QRB ROS benchmark</description>
  <maintainer email="quic_penfen@quicinc.com">Peng Feng</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros2_benchmark</depend>
  <depend>ros2_benchmark_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>qrb_ros_transport</depend>
  <depend>dmabuf_transport</depend>
  <depend>qrb_ros_tensor_list_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
